--- a/_posts/2021-05-25-leetcode.md
+++ b/_posts/2021-05-25-leetcode.md
@@ -1,3 +1,5 @@
 [Problem89-Gray Code](2021-05-25-leetcode-problem-89.md)
 
 [Problem91-Decode Ways](2021-06-01-leetcode-problem-91.md)
+
+[Problem92-Reverse Linked List](2021-06-04-leetcode-problem-92.md)
