leetcode, problem 96, unique binary search trees

--- a/_posts/2021-05-25-leetcode.md
+++ b/_posts/2021-05-25-leetcode.md
@@ -5,3 +5,5 @@
 [Problem92-Reverse Linked List](2021-06-04-leetcode-problem-92.md)
 
 [Problem93-Restore IP Addresses](2021-06-10-leetcode-problem-93.md)
+
+[Problem96-Unique Binary Search Trees](2021-06-15-leetcode-problem-96.md)
