leetcode, problem 95, unique binary search trees

--- a/_posts/2021-05-25-leetcode.md
+++ b/_posts/2021-05-25-leetcode.md
@@ -6,4 +6,6 @@
 
 [Problem93-Restore IP Addresses](2021-06-10-leetcode-problem-93.md)
 
+[Problem95-Unique Binary Search Trees](2021-06-18-leetcode-problem-95.md)
+
 [Problem96-Unique Binary Search Trees](2021-06-15-leetcode-problem-96.md)
