--- a/_posts/2021-07-06-mysql-log.md
+++ b/_posts/2021-07-06-mysql-log.md
@@ -12,7 +12,7 @@ redo log是固定大小的，通过wirte pos和check point循环读写。
 
 有了redo log，InnoDB就可以保证即使数据库发生异常重启，之前提交的记录也不会丢失，这种能力称为crash-safe.
 
-```
+```sql
 show variables like 'innodb_flush_log_at_trx_commit'; 
 ```
 
