MySQL log, binlog format

--- a/_posts/2021-07-06-mysql-log.md
+++ b/_posts/2021-07-06-mysql-log.md
@@ -27,9 +27,14 @@ show variables like 'innodb_log_files_in_group';
 # binlog(归档日志)
 MySQL server层自己的日志。
 
-binlog是逻辑日志，记录的是语句的原始逻辑，比如“给ID=2的这一行的c字段加1”。
+binlog是逻辑日志，记录的是语句的原始逻辑，比如“给ID=2的这一行的c字段加1”。binlog是可以“追加写”的，写到一定大小后会切换到下一个。
 
-binlog是可以“追加写”的，写到一定大小后会切换到下一个。
+binlog格式：
+- statement，记录的是SQL语句原文，可能会出现主备不一致的unsafe情形，比如在主备环境下使用了不同的索引
+- row，记录的是实际处理的行信息，不会有主备不一致，缺点是占用空间较大
+- mixed，折中方案，MySQL判断是否有可能导致主备不一致，如果有可能，使用row格式，否则使用statement格式
+
+越来越多的场景依赖于把binlog格式设置为row，这样的好处是方便做数据恢复。
 
 数据恢复或新增备库等操作就会用到binlog，一般采用的方法是基于全量备份重放binlog.
 
