--- a/_posts/2021-07-06-mysql-log.md
+++ b/_posts/2021-07-06-mysql-log.md
@@ -89,3 +89,12 @@ show variables like 'innodb_max_dirty_pages_pct';
 这个参数设置的是脏页比例上限。
 
 为了避免这种抖动，一方面要合理地设置*innodb_io_capacity*，另一方面要多关注脏页比例，尽量控制在75%以内。
+
+# 误删数据
+如果使用DELETE误删了数据，可以通过修改binlog后重放恢复原数据。当然，需要**binlog_format=row**和**binlog_row_image=FULL**.
+
+如果误删了表或库，那只能通过全量备份+增量日志的方式恢复数。当然，需要有定期的全量备份并且实时备份binlog.
+
+MySQL 5.6引入了延迟复制备库，可以设定某个备库和主库保持N秒的延迟，这样如果发现及时可以降低数据被误删的影响范围。
+
+rm命令误删数据，如果只是集群的某个节点，影响是可控的，HA系统会选出一个新的主库，保证整个集群的正常工作。如何避免整个集群被删除呢？跨机房备份一定程度上可以解决这个问题。
