leetcode, problem 542 and problem 994

--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -15,8 +15,10 @@
 
 # BFS
 - [Problem116-Populating Next Right Pointers in Each Node](_posts/2021-09-01-leetcode-problem-116.md)
+- [Problem542-01 Matrix](_posts/2021-09-08-leetcode-problem-542.md)
 - [Problem695-Max Area of Island](_posts/2021-08-30-leetcode-problem-695.md)
 - [Problem733-Flood Fill](_posts/2021-08-25-leetcode-problem-733.md)
+- [Problem994-Rotting Oranges](_posts/2021-09-08-leetcode-problem-994.md)
 
 # Dynamic Programming
 - [Problem3-Longest Substring Without Repeating Characters](_posts/2021-08-16-leetcode-problem-3.md)
