leetcode, problem 21, merge two sorted lists

--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -1,5 +1,6 @@
 # List
 - [Problem19-Remove Nth Node From End of List](2021-08-12-leetcode-problem-19.md)
+- [Problem21-Merge Two Sorted Lists](2021-09-09-leetcode-problem-21.md)
 
 # Two Pointers
 - [Problem876-Middle of Linked List](2021-08-11-leetcode-problem-876.md)
