--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -22,6 +22,9 @@
 - [Problem733-Flood Fill](2021-08-25-leetcode-problem-733.md)
 - [Problem994-Rotting Oranges](2021-09-08-leetcode-problem-994.md)
 
+# Recursion
+- [Problem77-Combinations](2021-09-13-leetcode-problem-77.md)
+
 # Dynamic Programming
 - [Problem3-Longest Substring Without Repeating Characters](2021-08-16-leetcode-problem-3.md)
 
