leetcode, problem 46, permutations

--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -23,6 +23,7 @@
 - [Problem994-Rotting Oranges](2021-09-08-leetcode-problem-994.md)
 
 # Recursion
+- [Problem46-Permutations](2021-09-14-leetcode-problem-46.md)
 - [Problem77-Combinations](2021-09-13-leetcode-problem-77.md)
 
 # Dynamic Programming
