leetcode, problem 198, house robber

--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -30,6 +30,7 @@
 - [Problem3-Longest Substring Without Repeating Characters](2021-08-16-leetcode-problem-3.md)
 - [Problem70-Climbing Stairs](2021-10-14-leetcode-problem-70.md)
 - [Problem120-Triangle](2021-10-14-leetcode-problem-120.md)
+- [Problem198-House Robber](2021-10-15-leetcode-problem-198.md)
 
 # 未归类
 - [Problem35-Search Insert Position](2021-07-28-leetcode-problem-35.md)
