--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -32,6 +32,10 @@
 - [Problem120-Triangle](2021-10-14-leetcode-problem-120.md)
 - [Problem198-House Robber](2021-10-15-leetcode-problem-198.md)
 
+# Bit
+- [Problem191-Number of 1 Bits](2021-10-15-leetcode-problem-191.md)
+- [Problem231-Power of Two](2021-10-15-leetcode-problem-231.md)
+
 # 未归类
 - [Problem35-Search Insert Position](2021-07-28-leetcode-problem-35.md)
 - [Problem89-Gray Code](2021-05-25-leetcode-problem-89.md)
