leetcode, problem 190, reverse bits

--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -34,6 +34,7 @@
 
 # Bit
 - [Problem136-Single Number](2021-10-19-leetcode-problem-136.md)
+- [Problem190-Reverse Bits](2021-10-19-leetcode-problem-190.md)
 - [Problem191-Number of 1 Bits](2021-10-15-leetcode-problem-191.md)
 - [Problem231-Power of Two](2021-10-15-leetcode-problem-231.md)
 
