--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -39,6 +39,9 @@
 - [Problem191-Number of 1 Bits](2021-10-15-leetcode-problem-191.md)
 - [Problem231-Power of Two](2021-10-15-leetcode-problem-231.md)
 
+# String
+- [Problem6-ZigZag Conversion](2021-11-01-leetcode-problem-6.md)
+
 # 未归类
 - [Problem35-Search Insert Position](2021-07-28-leetcode-problem-35.md)
 - [Problem89-Gray Code](2021-05-25-leetcode-problem-89.md)
