--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -41,6 +41,7 @@
 
 # String
 - [Problem6-ZigZag Conversion](2021-11-01-leetcode-problem-6.md)
+- [Problem8-String to Integer](2021-11-02-leetcode-problem-8.md)
 
 # 未归类
 - [Problem35-Search Insert Position](2021-07-28-leetcode-problem-35.md)
