--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -11,6 +11,7 @@
 - [Problem567-Permutation in String](2021-08-23-leetcode-problem-567.md)
 
 # DFS
+- [Problem22-Generate Parentheses](2021-11-18-leetcode-problem-22.md)
 - [Problem617-Merge Two Binary Trees](2021-09-01-leetcode-problem-617.md)
 - [Problem695-Max Area of Island](2021-08-30-leetcode-problem-695.md)
 - [Problem733-Flood Fill](2021-08-25-leetcode-problem-733.md)
@@ -33,6 +34,7 @@
 # Dynamic Programming
 - [Problem3-Longest Substring Without Repeating Characters](2021-08-16-leetcode-problem-3.md)
 - [Problem5-Longest Palindromic Substring](2021-10-25-leetcode-problem-5.md)
+- [Problem22-Generate Parentheses](2021-11-18-leetcode-problem-22.md)
 - [Problem70-Climbing Stairs](2021-10-14-leetcode-problem-70.md)
 - [Problem120-Triangle](2021-10-14-leetcode-problem-120.md)
 - [Problem198-House Robber](2021-10-15-leetcode-problem-198.md)
