leetcode, problem 16, three sum closest

--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -5,6 +5,7 @@
 
 # Two Pointers
 - [Problem15-Three Sum](2021-11-22-leetcode-problem-15.md)
+- [Problem16-Three Sum Closest](2021-11-23-leetcode-problem-16.md)
 - [Problem876-Middle of Linked List](2021-08-11-leetcode-problem-876.md)
 
 # Sliding Window
