leetcode, problem 34, find first and last position of element in sorted array

--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -13,6 +13,9 @@
 - [Problem3-Longest Substring Without Repeating Characters](2021-08-16-leetcode-problem-3.md)
 - [Problem567-Permutation in String](2021-08-23-leetcode-problem-567.md)
 
+# Search
+- [Problem34-Find First and Last Position of Elements in Sorted Array](2021-11-25-leetcode-problem-34.md)
+
 # DFS
 - [Problem22-Generate Parentheses](2021-11-18-leetcode-problem-22.md)
 - [Problem617-Merge Two Binary Trees](2021-09-01-leetcode-problem-617.md)
