--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -12,6 +12,7 @@
 
 # Sliding Window
 - [Problem3-Longest Substring Without Repeating Characters](2021-08-16-leetcode-problem-3.md)
+- [Problem187-Repeated DNA sequences](2021-12-08-leetcode-problem-187.md)
 - [Problem567-Permutation in String](2021-08-23-leetcode-problem-567.md)
 
 # Search
