leetcode, problem 153, find minimum in rotated sorted array

--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -15,8 +15,9 @@
 - [Problem187-Repeated DNA sequences](2021-12-08-leetcode-problem-187.md)
 - [Problem567-Permutation in String](2021-08-23-leetcode-problem-567.md)
 
-# Search
+# Binary Search
 - [Problem34-Find First and Last Position of Elements in Sorted Array](2021-11-25-leetcode-problem-34.md)
+- [Problem153-Find Minimum in Rotated Sorted Array](2021-12-09-leetcode-problem-153.md)
 
 # DFS
 - [Problem22-Generate Parentheses](2021-11-18-leetcode-problem-22.md)
