--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -28,6 +28,7 @@
 
 # BFS
 - [Problem116-Populating Next Right Pointers in Each Node](2021-09-01-leetcode-problem-116.md)
+- [Problem117-Populating Next Right Pointers in Each Node](2021-12-15-leetcode-problem-117.md)
 - [Problem542-01 Matrix](2021-09-08-leetcode-problem-542.md)
 - [Problem695-Max Area of Island](2021-08-30-leetcode-problem-695.md)
 - [Problem733-Flood Fill](2021-08-25-leetcode-problem-733.md)
