leetcode, problem 83, remove duplicates from sorted list

--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -1,6 +1,12 @@
+# String
+- [Problem6-ZigZag Conversion](2021-11-01-leetcode-problem-6.md)
+- [Problem8-String to Integer](2021-11-02-leetcode-problem-8.md)
+- [Problem12-Integer to Roman](2021-11-04-leetcode-problem-12.md)
+
 # List
 - [Problem19-Remove Nth Node From End of List](2021-08-12-leetcode-problem-19.md)
 - [Problem21-Merge Two Sorted Lists](2021-09-09-leetcode-problem-21.md)
+- [Problem83-Remove Duplicates From Sorted List](2021-12-20-leetcode-problem-83.md)
 - [Problem142-Linked List Cycle](2021-12-06-leetcode-problem-142.md)
 - [Problem206-Reverse Linked List](2021-09-10-leetcode-problem-206.md)
 
@@ -19,6 +25,14 @@
 - [Problem34-Find First and Last Position of Elements in Sorted Array](2021-11-25-leetcode-problem-34.md)
 - [Problem153-Find Minimum in Rotated Sorted Array](2021-12-09-leetcode-problem-153.md)
 
+# Recursion
+- [Problem17-Letter Combinations of Phone Numbers](2021-11-16-leetcode-problem-17.md)
+- [Problem46-Permutations](2021-09-14-leetcode-problem-46.md)
+- [Problem77-Combinations](2021-09-13-leetcode-problem-77.md)
+
+# Backtracking
+- [Problem17-Letter Combinations of Phone Numbers](2021-11-16-leetcode-problem-17.md)
+
 # DFS
 - [Problem22-Generate Parentheses](2021-11-18-leetcode-problem-22.md)
 - [Problem113-Path Sum](2021-12-13-leetcode-problem-113.md)
@@ -33,14 +47,6 @@
 - [Problem695-Max Area of Island](2021-08-30-leetcode-problem-695.md)
 - [Problem733-Flood Fill](2021-08-25-leetcode-problem-733.md)
 - [Problem994-Rotting Oranges](2021-09-08-leetcode-problem-994.md)
-
-# Recursion
-- [Problem17-Letter Combinations of Phone Numbers](2021-11-16-leetcode-problem-17.md)
-- [Problem46-Permutations](2021-09-14-leetcode-problem-46.md)
-- [Problem77-Combinations](2021-09-13-leetcode-problem-77.md)
-
-# Backtracking
-- [Problem17-Letter Combinations of Phone Numbers](2021-11-16-leetcode-problem-17.md)
 
 # Dynamic Programming
 - [Problem3-Longest Substring Without Repeating Characters](2021-08-16-leetcode-problem-3.md)
@@ -58,11 +64,6 @@
 - [Problem190-Reverse Bits](2021-10-19-leetcode-problem-190.md)
 - [Problem191-Number of 1 Bits](2021-10-15-leetcode-problem-191.md)
 - [Problem231-Power of Two](2021-10-15-leetcode-problem-231.md)
-
-# String
-- [Problem6-ZigZag Conversion](2021-11-01-leetcode-problem-6.md)
-- [Problem8-String to Integer](2021-11-02-leetcode-problem-8.md)
-- [Problem12-Integer to Roman](2021-11-04-leetcode-problem-12.md)
 
 # 未归类
 - [Problem35-Search Insert Position](2021-07-28-leetcode-problem-35.md)
