leetcode, problem 401, binary watch

--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -32,6 +32,7 @@
 
 # Backtracking
 - [Problem17-Letter Combinations of Phone Numbers](2021-11-16-leetcode-problem-17.md)
+- [Problem401-Binary Watch](2021-12-23-leetcode-problem-401.md)
 
 # DFS
 - [Problem22-Generate Parentheses](2021-11-18-leetcode-problem-22.md)
