--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -37,6 +37,7 @@
 
 # DFS
 - [Problem22-Generate Parentheses](2021-11-18-leetcode-problem-22.md)
+- [Problem39-Combination Sum](2021-12-27-leetcode-problem-39.md)
 - [Problem113-Path Sum](2021-12-13-leetcode-problem-113.md)
 - [Problem617-Merge Two Binary Trees](2021-09-01-leetcode-problem-617.md)
 - [Problem695-Max Area of Island](2021-08-30-leetcode-problem-695.md)
