leetcode, problem 139, word break

--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -57,6 +57,7 @@
 - [Problem22-Generate Parentheses](2021-11-18-leetcode-problem-22.md)
 - [Problem70-Climbing Stairs](2021-10-14-leetcode-problem-70.md)
 - [Problem120-Triangle](2021-10-14-leetcode-problem-120.md)
+- [Problem139-Word Break](2021-12-28-leetcode-problem-139.md)
 - [Problem198-House Robber](2021-10-15-leetcode-problem-198.md)
 
 # Greedy Algorithms
