--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -25,6 +25,7 @@
 # Binary Search
 - [Problem34-Find First and Last Position of Elements in Sorted Array](2021-11-25-leetcode-problem-34.md)
 - [Problem153-Find Minimum in Rotated Sorted Array](2021-12-09-leetcode-problem-153.md)
+- [Problem162-Find Peak Element](2021-12-29-leetcode-problem-162.md)
 
 # Recursion
 - [Problem17-Letter Combinations of Phone Numbers](2021-11-16-leetcode-problem-17.md)
