leetcode, problem 846, hand of straights

--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -1,3 +1,6 @@
+# Array
+- [Problem846-Hand of Straights](2021-12-30-leetcode-problem-846.md)
+
 # String
 - [Problem6-ZigZag Conversion](2021-11-01-leetcode-problem-6.md)
 - [Problem8-String to Integer](2021-11-02-leetcode-problem-8.md)
