--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -73,6 +73,9 @@
 - [Problem191-Number of 1 Bits](2021-10-15-leetcode-problem-191.md)
 - [Problem231-Power of Two](2021-10-15-leetcode-problem-231.md)
 
+# Math
+- [Problem1362-Closest Divisors](2021-12-31-leetcode-problem-1362.md)
+
 # 未归类
 - [Problem35-Search Insert Position](2021-07-28-leetcode-problem-35.md)
 - [Problem89-Gray Code](2021-05-25-leetcode-problem-89.md)
