leetcode, problem 33, search in rotated sorted array

--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -26,6 +26,7 @@
 - [Problem567-Permutation in String](2021-08-23-leetcode-problem-567.md)
 
 # Binary Search
+- [Problem33-Search in Rotated Sorted Array](2022-01-04-leetcode-problem-33.md)
 - [Problem34-Find First and Last Position of Elements in Sorted Array](2021-11-25-leetcode-problem-34.md)
 - [Problem153-Find Minimum in Rotated Sorted Array](2021-12-09-leetcode-problem-153.md)
 - [Problem162-Find Peak Element](2021-12-29-leetcode-problem-162.md)
