--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -10,6 +10,7 @@
 # List
 - [Problem19-Remove Nth Node From End of List](2021-08-12-leetcode-problem-19.md)
 - [Problem21-Merge Two Sorted Lists](2021-09-09-leetcode-problem-21.md)
+- [Problem82-Remove Duplicates From Sorted List](2022-01-06-leetcode-problem-82.md)
 - [Problem83-Remove Duplicates From Sorted List](2021-12-20-leetcode-problem-83.md)
 - [Problem142-Linked List Cycle](2021-12-06-leetcode-problem-142.md)
 - [Problem206-Reverse Linked List](2021-09-10-leetcode-problem-206.md)
