leetcode, problem 844, backspace string compare

--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -6,6 +6,7 @@
 - [Problem8-String to Integer](2021-11-02-leetcode-problem-8.md)
 - [Problem12-Integer to Roman](2021-11-04-leetcode-problem-12.md)
 - [Problem409-Longest Palindrome](2021-12-24-leetcode-problem-409.md)
+- [Problem844-Backspace String Compare](2022-01-07-leetcode-problem-844.md)
 
 # List
 - [Problem19-Remove Nth Node From End of List](2021-08-12-leetcode-problem-19.md)
