--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -21,6 +21,7 @@
 - [Problem16-Three Sum Closest](2021-11-23-leetcode-problem-16.md)
 - [Problem18-Four Sum](2021-11-24-leetcode-problem-18.md)
 - [Problem876-Middle of Linked List](2021-08-11-leetcode-problem-876.md)
+- [Problem986-Interval List Intersections](2022-01-10-leetcode-problem-986.md)
 
 # Sliding Window
 - [Problem3-Longest Substring Without Repeating Characters](2021-08-16-leetcode-problem-3.md)
