leetcode, problem 35, search insert position

--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -34,6 +34,7 @@
 # Binary Search
 - [Problem33-Search in Rotated Sorted Array](2022-01-04-leetcode-problem-33.md)
 - [Problem34-Find First and Last Position of Elements in Sorted Array](2021-11-25-leetcode-problem-34.md)
+- [Problem35-Search Insert Position](2022-02-08-leetcode-problem-35.md)
 - [Problem74-Search 2D Matrix](2022-01-05-leetcode-problem-74.md)
 - [Problem153-Find Minimum in Rotated Sorted Array](2021-12-09-leetcode-problem-153.md)
 - [Problem162-Find Peak Element](2021-12-29-leetcode-problem-162.md)
