--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -38,6 +38,7 @@
 - [Problem74-Search 2D Matrix](2022-01-05-leetcode-problem-74.md)
 - [Problem153-Find Minimum in Rotated Sorted Array](2021-12-09-leetcode-problem-153.md)
 - [Problem162-Find Peak Element](2021-12-29-leetcode-problem-162.md)
+- [Problem278-First Bad Version](2022-02-10-leetcode-problem-278.md)
 
 # Recursion
 - [Problem17-Letter Combinations of Phone Numbers](2021-11-16-leetcode-problem-17.md)
