--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -35,6 +35,7 @@
 - [Problem209-Minimum Size Subarray Sum](2022-01-17-leetcode-problem-209.md)
 - [Problem438-Find All Anagrams in String](2022-01-12-leetcode-problem-438.md)
 - [Problem567-Permutation in String](2021-08-23-leetcode-problem-567.md)
+- [Problem713-Subarray Product Less Than K](2022-01-14-leetcode-problem-713.md)
 
 # Binary Search
 - [Problem33-Search in Rotated Sorted Array](2022-01-04-leetcode-problem-33.md)
