--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -60,6 +60,7 @@
 - [Problem22-Generate Parentheses](2021-11-18-leetcode-problem-22.md)
 - [Problem39-Combination Sum](2021-12-27-leetcode-problem-39.md)
 - [Problem113-Path Sum](2021-12-13-leetcode-problem-113.md)
+- [Problem130-Surrounded Regions](2022-04-01-leetcode-problem-130.md)
 - [Problem200-Number of Islands](2022-01-24-leetcode-problem-200.md)
 - [Problem617-Merge Two Binary Trees](2021-09-01-leetcode-problem-617.md)
 - [Problem695-Max Area of Island](2021-08-30-leetcode-problem-695.md)
