--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -64,6 +64,7 @@
 - [Problem130-Surrounded Regions](2022-04-01-leetcode-problem-130.md)
 - [Problem200-Number of Islands](2022-01-24-leetcode-problem-200.md)
 - [Problem547-Number of Provines](2022-04-11-leetcode-problem-547.md)
+- [Problem572-Subtree of Another Tree](2022-04-12-leetcode-problem-572.md)
 - [Problem695-Max Area of Island](2021-08-30-leetcode-problem-695.md)
 - [Problem733-Flood Fill](2021-08-25-leetcode-problem-733.md)
 
