--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -57,6 +57,7 @@
 - [Problem17-Letter Combinations of Phone Numbers](2021-11-16-leetcode-problem-17.md)
 - [Problem22-Generate Parentheses](2021-11-18-leetcode-problem-22.md)
 - [Problem39-Combination Sum](2021-12-27-leetcode-problem-39.md)
+- [Problem40-Combination Sum](2022-04-22-leetcode-problem-40.md)
 - [Problem401-Binary Watch](2021-12-23-leetcode-problem-401.md)
 
 # DFS
