leetcode, problem 47, permutations, backtracking

--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -58,6 +58,7 @@
 - [Problem39-Combination Sum](2021-12-27-leetcode-problem-39.md)
 - [Problem40-Combination Sum](2022-04-22-leetcode-problem-40.md)
 - [Problem46-Permutations](2021-09-14-leetcode-problem-46.md)
+- [Problem47-Permutations](2022-04-25-leetcode-problem-47.md)
 - [Problem401-Binary Watch](2021-12-23-leetcode-problem-401.md)
 
 # DFS
