leetcode, problem 78, subsets, backtracking

--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -59,6 +59,7 @@
 - [Problem46-Permutations](2021-09-14-leetcode-problem-46.md)
 - [Problem47-Permutations](2022-04-25-leetcode-problem-47.md)
 - [Problem77-Combinations](2021-09-13-leetcode-problem-77.md)
+- [Problem78-Subsets](2022-04-26-leetcode-problem-78.md)
 - [Problem401-Binary Watch](2021-12-23-leetcode-problem-401.md)
 
 # DFS
