leetcode, problem 784, letter case permutation, backtracking

--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -63,6 +63,7 @@
 - [Problem79-Word Search](2022-04-28-leetcode-problem-79.md)
 - [Problem90-Subsets](2022-04-29-leetcode-problem-90.md)
 - [Problem401-Binary Watch](2021-12-23-leetcode-problem-401.md)
+- [Problem784-Letter Case Permutation](2022-05-05-leetcode-problem-784.md)
 
 # DFS
 - [Problem113-Path Sum](2021-12-13-leetcode-problem-113.md)
