leetcode, problem 5, longest palindromic substring, dynamic programming and brute force

--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -4,6 +4,7 @@
 - [Problem846-Hand of Straights](2021-12-30-leetcode-problem-846.md)
 
 # String
+- [Problem5-Longest Palindromic Substring](2021-10-25-leetcode-problem-5.md)
 - [Problem6-ZigZag Conversion](2021-11-01-leetcode-problem-6.md)
 - [Problem8-String to Integer](2021-11-02-leetcode-problem-8.md)
 - [Problem12-Integer to Roman](2021-11-04-leetcode-problem-12.md)
