leetcode, problem 55, jump game, greedy algorithm

--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -97,6 +97,7 @@
 
 # Greedy Algorithms
 - [Problem11-Container With Most Water](2021-11-03-leetcode-problem-11.md)
+- [Problem55-Jump Game](2022-05-09-leetcode-problem-55.md)
 
 # Bit
 - [Problem136-Single Number](2021-10-19-leetcode-problem-136.md)
