leetcode, problem 62, unique paths, dynamic programming

--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -90,6 +90,7 @@
 - [Problem5-Longest Palindromic Substring](2021-10-25-leetcode-problem-5.md)
 - [Problem22-Generate Parentheses](2021-11-18-leetcode-problem-22.md)
 - [Problem45-Jump Game](2022-05-07-leetcode-problem-45.md)
+- [Problem62-Unique Paths](2022-05-10-leetcode-problem-62.md)
 - [Problem70-Climbing Stairs](2021-10-14-leetcode-problem-70.md)
 - [Problem120-Triangle](2021-10-14-leetcode-problem-120.md)
 - [Problem139-Word Break](2021-12-28-leetcode-problem-139.md)
