leetcode, problem 2, add two numbers

--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -13,6 +13,7 @@
 - [Problem844-Backspace String Compare](2022-01-07-leetcode-problem-844.md)
 
 # List
+- [Problem2-Add Two Numbers](2022-10-21-leetcode-problem-2.md)
 - [Problem19-Remove Nth Node From End of List](2021-08-12-leetcode-problem-19.md)
 - [Problem21-Merge Two Sorted Lists](2021-09-09-leetcode-problem-21.md)
 - [Problem82-Remove Duplicates From Sorted List](2022-01-06-leetcode-problem-82.md)
