--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -1,5 +1,6 @@
 # Array
 - [Problem1-Two Sum](2022-10-12-leetcode-problem-1.md)
+- [Problem4-Median of Two Sorted Arrays](2022-11-07-leetcode-problem-4.md)
 - [Problem189-Rotate Array](2021-08-02-leetcode-problem-189.md)
 - [Problem344-Reverse String](2021-08-09-leetcode-problem-344.md)
 - [Problem846-Hand of Straights](2021-12-30-leetcode-problem-846.md)
