--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -112,6 +112,7 @@
 - [Problem231-Power of Two](2021-10-15-leetcode-problem-231.md)
 
 # Math
+- [Problem9-Palindrome Number](2022-11-08-leetcode-problem-9.md)
 - [Problem1362-Closest Divisors](2021-12-31-leetcode-problem-1362.md)
 
 # 未归类
