leetcode, problem 767, reorganize string

--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -69,6 +69,7 @@
 - [Problem79-Word Search](2022-04-28-leetcode-problem-79.md)
 - [Problem90-Subsets](2022-04-29-leetcode-problem-90.md)
 - [Problem401-Binary Watch](2021-12-23-leetcode-problem-401.md)
+- [Problem767-Reorganize String](2022-11-28-leetcode-problem-767.md)
 - [Problem784-Letter Case Permutation](2022-05-05-leetcode-problem-784.md)
 
 # DFS
