leetcode, problem 1664, ways to make a fair array

--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -4,6 +4,7 @@
 - [Problem189-Rotate Array](2021-08-02-leetcode-problem-189.md)
 - [Problem344-Reverse String](2021-08-09-leetcode-problem-344.md)
 - [Problem846-Hand of Straights](2021-12-30-leetcode-problem-846.md)
+- [Problem1664-Ways to Make a Fair Array](2023-01-28-leetcode-problem-1664.md)
 
 # String
 - [Problem5-Longest Palindromic Substring](2021-10-25-leetcode-problem-5.md)
