leetcode, problem 1129, shortest path with alternating colors

--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -94,6 +94,7 @@
 - [Problem733-Flood Fill](2021-08-25-leetcode-problem-733.md)
 - [Problem994-Rotting Oranges](2021-09-08-leetcode-problem-994.md)
 - [Problem1091-Shortest Path in Binary Matrix](2022-04-15-leetcode-problem-1091.md)
+- [Problem1129-Shortest Path with Alternating Colors](2023-02-06-leetcode-problem-1129.md)
 
 # Dynamic Programming
 - [Problem3-Longest Substring Without Repeating Characters](2021-08-16-leetcode-problem-3.md)
