leetcode, problem 1604, alert using same key-card three or more times in a one hour period

--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -45,6 +45,7 @@
 - [Problem438-Find All Anagrams in String](2022-01-12-leetcode-problem-438.md)
 - [Problem567-Permutation in String](2021-08-23-leetcode-problem-567.md)
 - [Problem713-Subarray Product Less Than K](2022-01-14-leetcode-problem-713.md)
+- [Problem1604-Alert Using Same Key-Card Three or More Times in a One Hour Period](2023-02-07-leetcode-problem-1604.md)
 
 # Binary Search
 - [Problem33-Search in Rotated Sorted Array](2022-01-04-leetcode-problem-33.md)
