--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -6,6 +6,7 @@
 - [Problem846-Hand of Straights](2021-12-30-leetcode-problem-846.md)
 - [Problem1664-Ways to Make a Fair Array](2023-01-28-leetcode-problem-1664.md)
 - [Problem2319-Check if Matrix is X-Matrix](2023-01-31-leetcode-problem-2319.md)
+- [Problem2347-Best Poker Hand](2023-02-20-leetcode-problem-2347.md)
 
 # String
 - [Problem5-Longest Palindromic Substring](2021-10-25-leetcode-problem-5.md)
