优化目录和结构

--- a/_posts/2021-08-26-maven.md
+++ b/_posts/2021-08-26-maven.md
@@ -1,6 +1,8 @@
 Maven is a powerful application building, packaging, and dependency management tool.
 
-## Maven artifact
+Almost all open source projects support distribution of libraries via the Maven repository. The most popular one is the Maven Central repository hosted on Apache, and you can access the search for the existence and related information of an artifact on the Maven Central web site.
+
+# Artifact
 A group ID, artifact ID, packaging type, and version identify eahc Maven artifact.
 
 - groupId: the unique identifier for a set of libraries available on the Maven repository. Often the library's base package name is used as the groupId
