--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -7,7 +7,7 @@
 - [Problem1664-Ways to Make a Fair Array](2023-01-28-leetcode-problem-1664.md)
 - [Problem2319-Check if Matrix is X-Matrix](2023-01-31-leetcode-problem-2319.md)
 - [Problem2347-Best Poker Hand](2023-02-20-leetcode-problem-2347.md)
-- [Problem2383-Minimum Hours of Training to Win a Competition](2023-03-13-leetcode-problem-2383.md)]
+- [Problem2383-Minimum Hours of Training to Win a Competition](2023-03-13-leetcode-problem-2383.md)
 
 # String
 - [Problem5-Longest Palindromic Substring](2021-10-25-leetcode-problem-5.md)
@@ -18,6 +18,7 @@
 - [Problem409-Longest Palindrome](2021-12-24-leetcode-problem-409.md)
 - [Problem844-Backspace String Compare](2022-01-07-leetcode-problem-844.md)
 - [Problem2325-Decode the Message](2023-02-01-leetcode-problem-2325.md)
+- [Problem2409-Count Days Spent Together](2023-04-17-leetcode-problem-2409.md)
 
 # List
 - [Problem2-Add Two Numbers](2022-10-21-leetcode-problem-2.md)
@@ -88,6 +89,7 @@
 - [Problem695-Max Area of Island](2021-08-30-leetcode-problem-695.md)
 - [Problem733-Flood Fill](2021-08-25-leetcode-problem-733.md)
 - [Problem797-All Paths From Source to Target](2022-04-14-leetcode-problem-797.md)
+- [Problem1026-Maximum Difference Between Node and Ancestor](2023-04-21-leetcode-problem-1026.md)
 
 # BFS
 - [Problem116-Populating Next Right Pointers in Each Node](2021-09-01-leetcode-problem-116.md)
@@ -110,6 +112,7 @@
 - [Problem120-Triangle](2021-10-14-leetcode-problem-120.md)
 - [Problem139-Word Break](2021-12-28-leetcode-problem-139.md)
 - [Problem198-House Robber](2021-10-15-leetcode-problem-198.md)
+- [Problem1105-Filling Bookcase Shelves](2023-04-28-leetcode-problem-1105.md)
 
 # Greedy Algorithms
 - [Problem11-Container With Most Water](2021-11-03-leetcode-problem-11.md)
