leetcode, problem 2106. maximum fruits harvested after at most k steps

--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -5,6 +5,7 @@
 - [Problem344-Reverse String](2021-08-09-leetcode-problem-344.md)
 - [Problem846-Hand of Straights](2021-12-30-leetcode-problem-846.md)
 - [Problem1664-Ways to Make a Fair Array](2023-01-28-leetcode-problem-1664.md)
+- [Problem2106-Maximum Fruits Harvested After at Most K Steps](2023-05-06-leetcode-problem-2106.md)
 - [Problem2319-Check if Matrix is X-Matrix](2023-01-31-leetcode-problem-2319.md)
 - [Problem2347-Best Poker Hand](2023-02-20-leetcode-problem-2347.md)
 - [Problem2383-Minimum Hours of Training to Win a Competition](2023-03-13-leetcode-problem-2383.md)
