leetcode, problem 1016, smallest integer divisible by k

--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -130,6 +130,7 @@
 # Math
 - [Problem7-Reverse Integer](2022-11-15-leetcode-problem-7.md)
 - [Problem9-Palindrome Number](2022-11-08-leetcode-problem-9.md)
+- [Problem1016-Smallest Integer Divisible by K](2023-05-10-leetcode-problem-1016.md)
 - [Problem1362-Closest Divisors](2021-12-31-leetcode-problem-1362.md)
 
 # 未归类
