--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -82,6 +82,9 @@
 - [Problem767-Reorganize String](2022-11-28-leetcode-problem-767.md)
 - [Problem784-Letter Case Permutation](2022-05-05-leetcode-problem-784.md)
 
+# Tree
+- [Problem1110-Delete Nodes And Return Forest](2023-05-31-leetcode-problem-1110.md)
+
 # DFS
 - [Problem113-Path Sum](2021-12-13-leetcode-problem-113.md)
 - [Problem130-Surrounded Regions](2022-04-01-leetcode-problem-130.md)
