leetcode, problem 2352, equal row and column pairs

--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -8,6 +8,7 @@
 - [Problem2106-Maximum Fruits Harvested After at Most K Steps](2023-05-06-leetcode-problem-2106.md)
 - [Problem2319-Check if Matrix is X-Matrix](2023-01-31-leetcode-problem-2319.md)
 - [Problem2347-Best Poker Hand](2023-02-20-leetcode-problem-2347.md)
+- [Problem2352-Equal Row and Column Pairs](2023-06-06-leetcode-problem-2352.md)
 - [Problem2383-Minimum Hours of Training to Win a Competition](2023-03-13-leetcode-problem-2383.md)
 
 # String
