leetcode, problem 2611, mice and cheese

--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -125,6 +125,7 @@
 - [Problem11-Container With Most Water](2021-11-03-leetcode-problem-11.md)
 - [Problem55-Jump Game](2022-05-09-leetcode-problem-55.md)
 - [Problem1053-Previous Permutation with One Swap](2023-04-10-leetcode-problem-1053.md)
+- [Problem2611-Mice and Cheese](2023-06-08-leetcode-problem-2611.md)
 
 # Bit
 - [Problem136-Single Number](2021-10-19-leetcode-problem-136.md)
