leetcode, problem 2481, minimum cuts to divide a circle

--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -138,6 +138,7 @@
 - [Problem9-Palindrome Number](2022-11-08-leetcode-problem-9.md)
 - [Problem1015-Smallest Integer Divisible by K](2023-05-10-leetcode-problem-1015.md)
 - [Problem1362-Closest Divisors](2021-12-31-leetcode-problem-1362.md)
+- [Problem2481-Minimum Cuts to Divide a Circle](2023-07-03-leetcode-problem-2481.md)
 
 # 未归类
 - [Problem89-Gray Code](2021-05-25-leetcode-problem-89.md)
