leetcode, problem 2178, maximum split of positive even integers

--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -82,6 +82,7 @@
 - [Problem401-Binary Watch](2021-12-23-leetcode-problem-401.md)
 - [Problem767-Reorganize String](2022-11-28-leetcode-problem-767.md)
 - [Problem784-Letter Case Permutation](2022-05-05-leetcode-problem-784.md)
+- [Problem2178-Maximum Split of Positive Even Integers](2023-07-10-leetcode-problem-2178.md)
 
 # Tree
 - [Problem1110-Delete Nodes And Return Forest](2023-05-31-leetcode-problem-1110.md)
@@ -125,6 +126,7 @@
 - [Problem11-Container With Most Water](2021-11-03-leetcode-problem-11.md)
 - [Problem55-Jump Game](2022-05-09-leetcode-problem-55.md)
 - [Problem1053-Previous Permutation with One Swap](2023-04-10-leetcode-problem-1053.md)
+- [Problem2178-Maximum Split of Positive Even Integers](2023-07-10-leetcode-problem-2178.md)
 - [Problem2611-Mice and Cheese](2023-06-08-leetcode-problem-2611.md)
 
 # Bit
