leetcode, problem 2544, alternating digit sum

--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -22,6 +22,7 @@
 - [Problem2325-Decode the Message](2023-02-01-leetcode-problem-2325.md)
 - [Problem2409-Count Days Spent Together](2023-04-17-leetcode-problem-2409.md)
 - [Problem2437-Number of Valid Clock Times](2023-05-09-leetcode-problem-2437.md)
+- [Problem2544-Alternating Digit Sum](2023-07-12-leetcode-problem-2544.md)
 
 # List
 - [Problem2-Add Two Numbers](2022-10-21-leetcode-problem-2.md)
