leetcode, problem 393, UTF8 validation

--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -136,6 +136,7 @@
 - [Problem190-Reverse Bits](2021-10-19-leetcode-problem-190.md)
 - [Problem191-Number of 1 Bits](2021-10-15-leetcode-problem-191.md)
 - [Problem231-Power of Two](2021-10-15-leetcode-problem-231.md)
+- [Problem393-UTF8 Validation](2023-08-07-leetcode-problem-393.md)
 
 # Math
 - [Problem7-Reverse Integer](2022-11-15-leetcode-problem-7.md)
