--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -87,6 +87,7 @@
 - [Problem2178-Maximum Split of Positive Even Integers](2023-07-10-leetcode-problem-2178.md)
 
 # Tree
+- [Problem449-Serialize and Deserialize BST](2023-09-05-leetcode-problem-449.md)
 - [Problem1110-Delete Nodes And Return Forest](2023-05-31-leetcode-problem-1110.md)
 
 # DFS
