leetcode, problem 1123, lowest common ancestor of deepest leaves

--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -89,6 +89,7 @@
 # Tree
 - [Problem449-Serialize and Deserialize BST](2023-09-05-leetcode-problem-449.md)
 - [Problem1110-Delete Nodes And Return Forest](2023-05-31-leetcode-problem-1110.md)
+- [Problem1123-Lowest Common Ancestor of Deepest Leaves](2023-09-07-leetcode-problem-1123.md)
 
 # DFS
 - [Problem113-Path Sum](2021-12-13-leetcode-problem-113.md)
