--- a/_posts/2021-09-03-leetcode.md
+++ b/_posts/2021-09-03-leetcode.md
@@ -10,6 +10,7 @@
 - [Problem2347-Best Poker Hand](2023-02-20-leetcode-problem-2347.md)
 - [Problem2352-Equal Row and Column Pairs](2023-06-06-leetcode-problem-2352.md)
 - [Problem2383-Minimum Hours of Training to Win a Competition](2023-03-13-leetcode-problem-2383.md)
+- [Problem2596-Check Knight Tour Configuration](2023-09-13-leetcode-problem-2596.md)
 
 # String
 - [Problem5-Longest Palindromic Substring](2021-10-25-leetcode-problem-5.md)
